--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "dotenv": "^17.2.2",
+    "motion": "^12.23.16",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
